--- a/slides/07-matinv/07-matinv.html
+++ b/slides/07-matinv/07-matinv.html
@@ -3367,7 +3367,7 @@ a_{m1} x_1 + \cdots + a_{mn} x_n &amp;=&amp; b_m
   &amp;\Leftrightarrow&amp; \mathbf{x} = \mathbf{A}^- \mathbf{b} + (\mathbf{I}_n - \mathbf{A}^- \mathbf{A}) \mathbf{q} \text{ for some } \mathbf{q} \in \mathbb{R}^n.
   \end{eqnarray*}\]</span></p></li>
 <li><p>Corollary: <span class="math inline">\(\mathbf{A} \mathbf{x} = \mathbf{b}\)</span> is consistent for <em>all</em> <span class="math inline">\(\mathbf{b}\)</span> if and only if <span class="math inline">\(\mathbf{A}\)</span> has full row rank.</p></li>
-<li><p>Corollary: If a system is consistent, its solution is unique if and only if <span class="math inline">\(\mathbf{b}\)</span> has full column rank.</p></li>
+<li><p>Corollary: If a system is consistent, its solution is unique if and only if <span class="math inline">\(\mathbf{A}\)</span> has full column rank.</p></li>
 </ul>
 </section>
 </section>
