--- a/slides/08-ls/08-ls.html
+++ b/slides/08-ls/08-ls.html
@@ -3204,7 +3204,7 @@ Q(\mathbf{x}) &amp;=&amp; \|\mathbf{b} - \mathbf{A} \mathbf{x}\|^2 \\
 &amp;=&amp; \mathbf{b}&#39; \mathbf{b} - 2 \mathbf{b}&#39; \mathbf{A} \mathbf{x} + \mathbf{x}&#39; \mathbf{A}&#39; \mathbf{A} \mathbf{x}.
 \end{eqnarray*}\]</span></p></li>
 <li><p><strong>Normal equation</strong>. To find the minimum, we take derivative and set the gradient to zero <span class="math display">\[
-\nabla Q(\mathbf{b}) = -2 \mathbf{A}&#39; \mathbf{b} + 2 \mathbf{A}&#39; \mathbf{A} \mathbf{x} = \mathbf{0}.
+\nabla Q(\mathbf{x}) = -2 \mathbf{A}&#39; \mathbf{b} + 2 \mathbf{A}&#39; \mathbf{A} \mathbf{x} = \mathbf{0}.
 \]</span> This leads to the normal equation <span class="math display">\[
 \mathbf{A}&#39; \mathbf{A} \mathbf{x} = \mathbf{A}&#39; \mathbf{b}.
 \]</span></p></li>
