--- a/slides/09-det/09-det.html
+++ b/slides/09-det/09-det.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Dr. Hua Zhou @ UCLA">
-<meta name="dcterms.date" content="2023-11-07">
+<meta name="dcterms.date" content="2023-11-09">
 
 <title>Determinant (BR Chapter 10)</title>
 <style>
@@ -3170,7 +3170,7 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">November 7, 2023</p>
+      <p class="date">November 9, 2023</p>
     </div>
   </div>
   
@@ -3429,9 +3429,9 @@ This classifies orthogonal matrices into two classes: rotations and reflections.
 <li><p><span class="math inline">\(\det(\mathbf{A}^{-1}) = 1/\det(\mathbf{A})\)</span>.</p></li>
 <li><p><span class="math inline">\(\det(c\mathbf{A}) = c^n \det(\mathbf{A})\)</span>.</p></li>
 <li><p>Determinant of a permutation matrix is the sign of the corresponding permutation.</p></li>
-<li><p>Determinant of diagonal block matrix <span class="math display">\[\begin{eqnarray*}
+<li><p>Determinant of triangular block matrix <span class="math display">\[\begin{eqnarray*}
   \det \left( \begin{pmatrix}
-  \mathbf{A} &amp; \mathbf{O} \\
+  \mathbf{A} &amp; \mathbf{B} \\
   \mathbf{O} &amp; \mathbf{D}
   \end{pmatrix} \right) = \det (\mathbf{A}) \det (\mathbf{D}).
 \end{eqnarray*}\]</span></p></li>
