--- a/hw/hw4/hw4.html
+++ b/hw/hw4/hw4.html
@@ -3151,7 +3151,7 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
 \]</span> where <span class="math inline">\(\mathbf{u}\)</span> is the unit vector <span class="math inline">\(\mathbf{v} / \|\mathbf{v}\|\)</span>.</p>
 <ol type="1">
 <li><p>Show that <span class="math inline">\(\mathbf{H}\)</span> is symmetric and orthogonal.</p></li>
-<li><p>Let <span class="math inline">\(\mathbf{a}, \mathbf{b} \in \mathbb{R}^n\)</span> such that <span class="math inline">\(\|\mathbf{a}\| = \|\mathbf{b}\|\)</span>. Find a Household matrix such that <span class="math inline">\(\mathbf{H} \mathbf{a} = \mathbf{b}\)</span>.</p></li>
+<li><p>Let <span class="math inline">\(\mathbf{a}, \mathbf{b} \in \mathbb{R}^n\)</span> such that <span class="math inline">\(\|\mathbf{a}\| = \|\mathbf{b}\|\)</span>. Find a Householder matrix such that <span class="math inline">\(\mathbf{H} \mathbf{a} = \mathbf{b}\)</span>.</p></li>
 <li><p>Let <span class="math inline">\(\mathbf{a} \in \mathbb{R}^n\)</span> be a non-zero vector. Find a Householder matrix such that <span class="math display">\[
 \mathbf{H} \mathbf{a} = \begin{pmatrix} \|\mathbf{a}\| \\ \mathbf{0}_{n-1} \end{pmatrix}.
 \]</span></p></li>
