--- a/slides/08-ls/08-ls.html
+++ b/slides/08-ls/08-ls.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Dr. Hua Zhou @ UCLA">
-<meta name="dcterms.date" content="2023-11-07">
+<meta name="dcterms.date" content="2023-11-21">
 
 <title>Least squares (BV Chapters 12-13)</title>
 <style>
@@ -3166,7 +3166,7 @@ return!"\t\n\x0B\f\r                　\u2028\u2029
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">November 7, 2023</p>
+      <p class="date">November 21, 2023</p>
     </div>
   </div>
   
@@ -3226,7 +3226,7 @@ Q(\mathbf{x}) &amp;=&amp; \|\mathbf{b} - \mathbf{A} \mathbf{x}\|^2 \\
 <li><p>The direct argument also reveals that the <em>fitted values</em> <span class="math inline">\(\hat{\mathbf{b}} = \mathbf{A} \hat{\mathbf{x}}\)</span> is invariant to the choice of the solution to the normal equation.</p></li>
 <li><p>Now we know the normal equation is always consistent and we want to find all solution(s). In general the least squares solution can be represented as <span class="math display">\[\begin{eqnarray*}
 &amp; &amp; (\mathbf{A}&#39; \mathbf{A})^- \mathbf{A}&#39; \mathbf{b} + [\mathbf{I} - (\mathbf{A}&#39; \mathbf{A})^- (\mathbf{A}&#39; \mathbf{A})] \mathbf{q} \\
-&amp;=&amp; (\mathbf{A}&#39; \mathbf{A})^- \mathbf{A}&#39; \mathbf{b} + (\mathbf{I} - \mathbf{A}^- \mathbf{A}&#39;) \mathbf{q},
+&amp;=&amp; (\mathbf{A}&#39; \mathbf{A})^- \mathbf{A}&#39; \mathbf{b} + (\mathbf{I} - \mathbf{A}^- \mathbf{A}) \mathbf{q},
 \end{eqnarray*}\]</span> where <span class="math inline">\(\mathbf{q}\)</span> is arbitrary. One specific solution is <span class="math display">\[\begin{eqnarray*}
   \hat{\mathbf{x}} = (\mathbf{A}&#39; \mathbf{A})^- \mathbf{A}&#39; \mathbf{b}
 \end{eqnarray*}\]</span> with corresponding fitted values <span class="math display">\[\begin{eqnarray*}
